CompiladorMiniC/sintactico.output
Estado 77 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: program $end

    1 $@1: %empty

    2 program: $@1 "void" "id" "(" ")" "{" declarations statement_list "}"

    3 $@2: %empty

    4 declarations: declarations "var" $@2 identifier_list ";"

    5 $@3: %empty

    6 declarations: declarations "const" $@3 identifier_list ";"
    7             | %empty
    8             | declarations "var" error ";"
    9             | declarations "const" error ";"

   10 identifier_list: asig
   11                | identifier_list "," asig

   12 asig: "id"
   13     | "id" "=" expression

   14 statement_list: statement_list statement
   15               | %empty

   16 statement: "id" "=" expression ";"
   17          | "{" statement_list "}"
   18          | "if" "(" expression ")" statement "else" statement
   19          | "if" "(" expression ")" statement
   20          | "while" "(" expression ")" statement
   21          | "print" print_list ";"
   22          | "read" read_list ";"
   23          | error ";"

   24 print_list: print_item
   25           | print_list "," print_item

   26 print_item: expression
   27           | "string"

   28 read_list: "id"
   29          | read_list "," "id"

   30 expression: expression "+" expression
   31           | expression "-" expression
   32           | expression "*" expression
   33           | expression "/" expression
   34           | "-" expression
   35           | "(" expression ")"
   36           | "id"
   37           | "int"


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 8 9 23
    "void" (258) 2
    "var" (259) 4 8
    "const" (260) 6 9
    "if" (261) 18 19
    "else" (262) 18
    "while" (263) 20
    "print" (264) 21
    "read" (265) 22
    "id" <str> (266) 2 12 13 16 28 29 36
    "int" <str> (267) 37
    "string" <str> (268) 27
    "(" (269) 2 18 19 20 35
    ")" (270) 2 18 19 20 35
    ";" (271) 4 6 8 9 16 21 22 23
    "," (272) 11 25 29
    "=" (273) 13 16
    "+" (274) 30
    "-" (275) 31 34
    "*" (276) 32
    "/" (277) 33
    "{" (278) 2 17
    "}" (279) 2 17
    UMINUS (280)


No terminales con las reglas donde aparecen

    $accept (26)
        on left: 0
    program (27)
        on left: 2
        on right: 0
    $@1 (28)
        on left: 1
        on right: 2
    declarations <codigo> (29)
        on left: 4 6 7 8 9
        on right: 2 4 6 8 9
    $@2 (30)
        on left: 3
        on right: 4
    $@3 (31)
        on left: 5
        on right: 6
    identifier_list <codigo> (32)
        on left: 10 11
        on right: 4 6 11
    asig <codigo> (33)
        on left: 12 13
        on right: 10 11
    statement_list <codigo> (34)
        on left: 14 15
        on right: 2 14 17
    statement <codigo> (35)
        on left: 16 17 18 19 20 21 22 23
        on right: 14 18 19 20
    print_list <codigo> (36)
        on left: 24 25
        on right: 21 25
    print_item <codigo> (37)
        on left: 26 27
        on right: 24 25
    read_list <codigo> (38)
        on left: 28 29
        on right: 22 29
    expression <codigo> (39)
        on left: 30 31 32 33 34 35 36 37
        on right: 13 16 18 19 20 26 30 31 32 33 34 35


Estado 0

    0 $accept: . program $end

    $default  reduce usando la regla 1 ($@1)

    program  ir al estado 1
    $@1      ir al estado 2


Estado 1

    0 $accept: program . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 program: $@1 . "void" "id" "(" ")" "{" declarations statement_list "}"

    "void"  desplazar e ir al estado 4


Estado 3

    0 $accept: program $end .

    $default  aceptar


Estado 4

    2 program: $@1 "void" . "id" "(" ")" "{" declarations statement_list "}"

    "id"  desplazar e ir al estado 5


Estado 5

    2 program: $@1 "void" "id" . "(" ")" "{" declarations statement_list "}"

    "("  desplazar e ir al estado 6


Estado 6

    2 program: $@1 "void" "id" "(" . ")" "{" declarations statement_list "}"

    ")"  desplazar e ir al estado 7


Estado 7

    2 program: $@1 "void" "id" "(" ")" . "{" declarations statement_list "}"

    "{"  desplazar e ir al estado 8


Estado 8

    2 program: $@1 "void" "id" "(" ")" "{" . declarations statement_list "}"

    $default  reduce usando la regla 7 (declarations)

    declarations  ir al estado 9


Estado 9

    2 program: $@1 "void" "id" "(" ")" "{" declarations . statement_list "}"
    4 declarations: declarations . "var" $@2 identifier_list ";"
    6             | declarations . "const" $@3 identifier_list ";"
    8             | declarations . "var" error ";"
    9             | declarations . "const" error ";"

    "var"    desplazar e ir al estado 10
    "const"  desplazar e ir al estado 11

    $default  reduce usando la regla 15 (statement_list)

    statement_list  ir al estado 12


Estado 10

    4 declarations: declarations "var" . $@2 identifier_list ";"
    8             | declarations "var" . error ";"

    error  desplazar e ir al estado 13

    "id"  reduce usando la regla 3 ($@2)

    $@2  ir al estado 14


Estado 11

    6 declarations: declarations "const" . $@3 identifier_list ";"
    9             | declarations "const" . error ";"

    error  desplazar e ir al estado 15

    "id"  reduce usando la regla 5 ($@3)

    $@3  ir al estado 16


Estado 12

    2 program: $@1 "void" "id" "(" ")" "{" declarations statement_list . "}"
   14 statement_list: statement_list . statement

    error    desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "id"     desplazar e ir al estado 22
    "{"      desplazar e ir al estado 23
    "}"      desplazar e ir al estado 24

    statement  ir al estado 25


Estado 13

    8 declarations: declarations "var" error . ";"

    ";"  desplazar e ir al estado 26


Estado 14

    4 declarations: declarations "var" $@2 . identifier_list ";"

    "id"  desplazar e ir al estado 27

    identifier_list  ir al estado 28
    asig             ir al estado 29


Estado 15

    9 declarations: declarations "const" error . ";"

    ";"  desplazar e ir al estado 30


Estado 16

    6 declarations: declarations "const" $@3 . identifier_list ";"

    "id"  desplazar e ir al estado 27

    identifier_list  ir al estado 31
    asig             ir al estado 29


Estado 17

   23 statement: error . ";"

    ";"  desplazar e ir al estado 32


Estado 18

   18 statement: "if" . "(" expression ")" statement "else" statement
   19          | "if" . "(" expression ")" statement

    "("  desplazar e ir al estado 33


Estado 19

   20 statement: "while" . "(" expression ")" statement

    "("  desplazar e ir al estado 34


Estado 20

   21 statement: "print" . print_list ";"

    "id"      desplazar e ir al estado 35
    "int"     desplazar e ir al estado 36
    "string"  desplazar e ir al estado 37
    "("       desplazar e ir al estado 38
    "-"       desplazar e ir al estado 39

    print_list  ir al estado 40
    print_item  ir al estado 41
    expression  ir al estado 42


Estado 21

   22 statement: "read" . read_list ";"

    "id"  desplazar e ir al estado 43

    read_list  ir al estado 44


Estado 22

   16 statement: "id" . "=" expression ";"

    "="  desplazar e ir al estado 45


Estado 23

   17 statement: "{" . statement_list "}"

    $default  reduce usando la regla 15 (statement_list)

    statement_list  ir al estado 46


Estado 24

    2 program: $@1 "void" "id" "(" ")" "{" declarations statement_list "}" .

    $default  reduce usando la regla 2 (program)


Estado 25

   14 statement_list: statement_list statement .

    $default  reduce usando la regla 14 (statement_list)


Estado 26

    8 declarations: declarations "var" error ";" .

    $default  reduce usando la regla 8 (declarations)


Estado 27

   12 asig: "id" .
   13     | "id" . "=" expression

    "="  desplazar e ir al estado 47

    $default  reduce usando la regla 12 (asig)


Estado 28

    4 declarations: declarations "var" $@2 identifier_list . ";"
   11 identifier_list: identifier_list . "," asig

    ";"  desplazar e ir al estado 48
    ","  desplazar e ir al estado 49


Estado 29

   10 identifier_list: asig .

    $default  reduce usando la regla 10 (identifier_list)


Estado 30

    9 declarations: declarations "const" error ";" .

    $default  reduce usando la regla 9 (declarations)


Estado 31

    6 declarations: declarations "const" $@3 identifier_list . ";"
   11 identifier_list: identifier_list . "," asig

    ";"  desplazar e ir al estado 50
    ","  desplazar e ir al estado 49


Estado 32

   23 statement: error ";" .

    $default  reduce usando la regla 23 (statement)


Estado 33

   18 statement: "if" "(" . expression ")" statement "else" statement
   19          | "if" "(" . expression ")" statement

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 51


Estado 34

   20 statement: "while" "(" . expression ")" statement

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 52


Estado 35

   36 expression: "id" .

    $default  reduce usando la regla 36 (expression)


Estado 36

   37 expression: "int" .

    $default  reduce usando la regla 37 (expression)


Estado 37

   27 print_item: "string" .

    $default  reduce usando la regla 27 (print_item)


Estado 38

   35 expression: "(" . expression ")"

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 53


Estado 39

   34 expression: "-" . expression

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 54


Estado 40

   21 statement: "print" print_list . ";"
   25 print_list: print_list . "," print_item

    ";"  desplazar e ir al estado 55
    ","  desplazar e ir al estado 56


Estado 41

   24 print_list: print_item .

    $default  reduce usando la regla 24 (print_list)


Estado 42

   26 print_item: expression .
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60

    $default  reduce usando la regla 26 (print_item)


Estado 43

   28 read_list: "id" .

    $default  reduce usando la regla 28 (read_list)


Estado 44

   22 statement: "read" read_list . ";"
   29 read_list: read_list . "," "id"

    ";"  desplazar e ir al estado 61
    ","  desplazar e ir al estado 62


Estado 45

   16 statement: "id" "=" . expression ";"

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 63


Estado 46

   14 statement_list: statement_list . statement
   17 statement: "{" statement_list . "}"

    error    desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "id"     desplazar e ir al estado 22
    "{"      desplazar e ir al estado 23
    "}"      desplazar e ir al estado 64

    statement  ir al estado 25


Estado 47

   13 asig: "id" "=" . expression

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 65


Estado 48

    4 declarations: declarations "var" $@2 identifier_list ";" .

    $default  reduce usando la regla 4 (declarations)


Estado 49

   11 identifier_list: identifier_list "," . asig

    "id"  desplazar e ir al estado 27

    asig  ir al estado 66


Estado 50

    6 declarations: declarations "const" $@3 identifier_list ";" .

    $default  reduce usando la regla 6 (declarations)


Estado 51

   18 statement: "if" "(" expression . ")" statement "else" statement
   19          | "if" "(" expression . ")" statement
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression

    ")"  desplazar e ir al estado 67
    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60


Estado 52

   20 statement: "while" "(" expression . ")" statement
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression

    ")"  desplazar e ir al estado 68
    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60


Estado 53

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   35           | "(" expression . ")"

    ")"  desplazar e ir al estado 69
    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60


Estado 54

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   34           | "-" expression .

    $default  reduce usando la regla 34 (expression)


Estado 55

   21 statement: "print" print_list ";" .

    $default  reduce usando la regla 21 (statement)


Estado 56

   25 print_list: print_list "," . print_item

    "id"      desplazar e ir al estado 35
    "int"     desplazar e ir al estado 36
    "string"  desplazar e ir al estado 37
    "("       desplazar e ir al estado 38
    "-"       desplazar e ir al estado 39

    print_item  ir al estado 70
    expression  ir al estado 42


Estado 57

   30 expression: expression "+" . expression

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 71


Estado 58

   31 expression: expression "-" . expression

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 72


Estado 59

   32 expression: expression "*" . expression

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 73


Estado 60

   33 expression: expression "/" . expression

    "id"   desplazar e ir al estado 35
    "int"  desplazar e ir al estado 36
    "("    desplazar e ir al estado 38
    "-"    desplazar e ir al estado 39

    expression  ir al estado 74


Estado 61

   22 statement: "read" read_list ";" .

    $default  reduce usando la regla 22 (statement)


Estado 62

   29 read_list: read_list "," . "id"

    "id"  desplazar e ir al estado 75


Estado 63

   16 statement: "id" "=" expression . ";"
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression

    ";"  desplazar e ir al estado 76
    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60


Estado 64

   17 statement: "{" statement_list "}" .

    $default  reduce usando la regla 17 (statement)


Estado 65

   13 asig: "id" "=" expression .
   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression

    "+"  desplazar e ir al estado 57
    "-"  desplazar e ir al estado 58
    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60

    $default  reduce usando la regla 13 (asig)


Estado 66

   11 identifier_list: identifier_list "," asig .

    $default  reduce usando la regla 11 (identifier_list)


Estado 67

   18 statement: "if" "(" expression ")" . statement "else" statement
   19          | "if" "(" expression ")" . statement

    error    desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "id"     desplazar e ir al estado 22
    "{"      desplazar e ir al estado 23

    statement  ir al estado 77


Estado 68

   20 statement: "while" "(" expression ")" . statement

    error    desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "id"     desplazar e ir al estado 22
    "{"      desplazar e ir al estado 23

    statement  ir al estado 78


Estado 69

   35 expression: "(" expression ")" .

    $default  reduce usando la regla 35 (expression)


Estado 70

   25 print_list: print_list "," print_item .

    $default  reduce usando la regla 25 (print_list)


Estado 71

   30 expression: expression . "+" expression
   30           | expression "+" expression .
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression

    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60

    $default  reduce usando la regla 30 (expression)


Estado 72

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   31           | expression "-" expression .
   32           | expression . "*" expression
   33           | expression . "/" expression

    "*"  desplazar e ir al estado 59
    "/"  desplazar e ir al estado 60

    $default  reduce usando la regla 31 (expression)


Estado 73

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   32           | expression "*" expression .
   33           | expression . "/" expression

    $default  reduce usando la regla 32 (expression)


Estado 74

   30 expression: expression . "+" expression
   31           | expression . "-" expression
   32           | expression . "*" expression
   33           | expression . "/" expression
   33           | expression "/" expression .

    $default  reduce usando la regla 33 (expression)


Estado 75

   29 read_list: read_list "," "id" .

    $default  reduce usando la regla 29 (read_list)


Estado 76

   16 statement: "id" "=" expression ";" .

    $default  reduce usando la regla 16 (statement)


Estado 77

   18 statement: "if" "(" expression ")" statement . "else" statement
   19          | "if" "(" expression ")" statement .

    "else"  desplazar e ir al estado 79

    "else"    [reduce usando la regla 19 (statement)]
    $default  reduce usando la regla 19 (statement)


Estado 78

   20 statement: "while" "(" expression ")" statement .

    $default  reduce usando la regla 20 (statement)


Estado 79

   18 statement: "if" "(" expression ")" statement "else" . statement

    error    desplazar e ir al estado 17
    "if"     desplazar e ir al estado 18
    "while"  desplazar e ir al estado 19
    "print"  desplazar e ir al estado 20
    "read"   desplazar e ir al estado 21
    "id"     desplazar e ir al estado 22
    "{"      desplazar e ir al estado 23

    statement  ir al estado 80


Estado 80

   18 statement: "if" "(" expression ")" statement "else" statement .

    $default  reduce usando la regla 18 (statement)
